--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,9 @@ aws-sdk-s3 = "0.22.0"
 aws-smithy-http = "0.52.0"
 sha2 = "0.10"
 hex-literal = "0.3.4"
-bytes = "1"
+bytes = "1.3.0"
 image = "0.24.5" 
 rqrr = "0.6.0"
 num_cpus = "1.15.0"
+kamadak-exif = "0.5.5"
+
