--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,11 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
+tokio-stream = "0.1.11"
 futures = { version = "0.3", features = ["thread-pool"]}
 aws-config = "0.52.0"
 aws-sdk-s3 = "0.22.0"
-aws-smithy-http = "0.52.0"
+aws-smithy-http = "0.53.0"
 sha2 = "0.10"
 hex-literal = "0.3.4"
 bytes = "1.3.0"
